--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
           <p>Built with pure HTML, CSS and JavaScript</p>
         </div>
         <div class="footer-social">
-          <a href="https://www.instagram.com/nimishjain_" target="_blank"
-            ><i class="fab fa-instagram"></i
+          <a href="https://www.linkedin.com/in/nimish-jain-79943b12a/" target="_blank"
+            ><i class="fab fa-linkedin"></i
           ></a>
           <a href="https://github.com/nimishjn" target="_blank"
             ><i class="fab fa-github"></i
