Added the links

--- a/index.html
+++ b/index.html
@@ -50,13 +50,25 @@
               <a href="#contact" class="nav-link">Contact</a>
             </li>
             <li class="nav-item">
-              <a href="#" target="_blank" class="nav-link">
-                <i class="fab fa-youtube"></i>
+              <a
+                href="https://www.linkedin.com/in/nimish-jain-79943b12a/"
+                target="_blank"
+                class="nav-link"
+              >
+                <i class="fab fa-linkedin"></i>
               </a>
-              <a href="#" target="_blank" class="nav-link">
-                <i class="fab fa-dev"></i>
+              <a
+                href="https://github.com/nimishjn"
+                target="_blank"
+                class="nav-link"
+              >
+                <i class="fab fa-github"></i>
               </a>
-              <a href="#" target="_blank" class="nav-link">
+              <a
+                href="https://twitter.com/nimishjain_"
+                target="_blank"
+                class="nav-link"
+              >
                 <i class="fab fa-twitter"></i>
               </a>
             </li>
@@ -251,8 +263,10 @@
             >
           </p>
           <p>
-            <a href="https://www.instagram.com/nimishjain_" target="_blank"
-              ><i class="fab fa-instagram"> Instagram</i></a
+            <a
+              href="https://www.linkedin.com/in/nimish-jain-79943b12a/"
+              target="_blank"
+              ><i class="fab fa-linkedin"> LinkedIn</i></a
             >
           </p>
           <p>
@@ -281,8 +295,10 @@
           <p>Built with pure HTML, CSS and JavaScript</p>
         </div>
         <div class="footer-social">
-          <a href="https://www.instagram.com/nimishjain_" target="_blank"
-            ><i class="fab fa-instagram"></i
+          <a
+            href="https://www.linkedin.com/in/nimish-jain-79943b12a/"
+            target="_blank"
+            ><i class="fab fa-linkedin"></i
           ></a>
           <a href="https://github.com/nimishjn" target="_blank"
             ><i class="fab fa-github"></i
