--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <a href="#landing-page">
                 <img
                   src="images/profile-pic.jpg"
-                  alt="Chaoo Charles"
+                  alt="Nimish Jain"
                   class="profile-pic nav-link"
                 />
                 <span class="caption nav-link">Nimish Jain</span>
