--- a/index.html
+++ b/index.html
@@ -111,22 +111,7 @@
           <div class="about-text-box">
             <h2>Hello 👋🏽</h2>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit
-              necessitatibus, ducimus quas ea pariatur esse sequi iusto
-              repudiandae minus, harum quia, inventore aut officiis tempora
-              blanditiis quaerat explicabo optio rem.
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit
-              necessitatibus, ducimus quas ea pariatur esse sequi iusto
-              repudiandae minus, harum quia, inventore aut officiis tempora
-              blanditiis quaerat explicabo optio rem.
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit
-              necessitatibus, ducimus quas ea pariatur esse sequi iusto
-              repudiandae minus, harum quia, inventore aut officiis tempora
-              blanditiis quaerat explicabo optio rem.
+              This is Nimish Jain, fresher at Vellore Institute of Technology, Vellore studying in the Infomation Technology Branch
             </p>
           </div>
         </div>
