--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="container">
           <div class="main-message">
             <h2>Nimish Jain</h2>
-            <h3>{Aspiring full-stack developer}</h3>
+            <h3>Aspiring full-stack developer</h3>
             <p>Html . CSS . JavaScript . Java . C++ . Python</p>
             <div class="intro-btn">
               <div class="cta">
@@ -111,7 +111,7 @@
           <div class="about-text-box">
             <h2>Hello 👋🏽</h2>
             <p>
-              This is Nimish Jain, fresher at Vellore Institute of Technology, Vellore studying in the Infomation Technology Branch
+              This is Nimish Jain, fresher at Vellore Institute of Technology, Vellore studying in the Infomation Technology Branch.
             </p>
           </div>
         </div>
@@ -120,41 +120,23 @@
       <section id="services" class="services">
         <div class="container">
           <div class="title-heading">
-            <h2>DIGITIZE YOUR BUSINESS</h2>
-            <p>
-              i will help you to create a remarkable first impression with
-              creative designs
-            </p>
+            <h2>SKILLS</h2>
           </div>
           <div class="service-tiers">
             <div class="tier-item">
               <i class="fa fa-code" aria-hidden="true"></i>
               <h2>Web Development</h2>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
-                quasi earum, debitis exercitationem quod labore quae, saepe
-                voluptatum fugiat placeat iste, numquam maxime? Aliquam
-                explicabo, reiciendis corrupti voluptatum eum esse?
+                Aspiring Full-stack web developer. Currently learning front-end 
+                web development using react.js. 
               </p>
             </div>
             <div class="tier-item">
               <i class="fa fa-mobile" aria-hidden="true"></i>
               <h2>Responsive Design</h2>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
-                quasi earum, debitis exercitationem quod labore quae, saepe
-                voluptatum fugiat placeat iste, numquam maxime? Aliquam
-                explicabo, reiciendis corrupti voluptatum eum esse?
-              </p>
-            </div>
-            <div class="tier-item">
-              <i class="fa fa-file-code-o" aria-hidden="true"></i>
-              <h2>PSD to HTML</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
-                quasi earum, debitis exercitationem quod labore quae, saepe
-                voluptatum fugiat placeat iste, numquam maxime? Aliquam
-                explicabo, reiciendis corrupti voluptatum eum esse?
+                Currently using Bootstrap for effective responsive design. 
+                
               </p>
             </div>
           </div>
@@ -228,15 +210,12 @@
       </section>
       <section id="contact" class="contact">
         <h2>Get In Touch</h2>
-        <p>
+        <p style="text-align: center;">
           I'd love if you reached out to me. Even if it's just to say "Hey!".
-          Don't hesitate! Drop me a line and I’ll get back to you ASAP!
+          
         </p>
-        <p>
-          <i
-            >For gig and advertising opportunities, begin your subject with
-            <strong>"Gig"</strong></i
-          >
+        <p style="text-align: center;">
+          Don't hesitate! Drop me a line and I’ll get back to you ASAP!
         </p>
         <div class="container">
           <p>
@@ -265,15 +244,7 @@
         <hr />
       </section>
       <footer>
-        <div class="footer-nav">
-          <a href="#landing-page" class="footer-nav-link">Home</a>
-          <a href="#about" class="footer-nav-link">About</a>
-          <a href="#services" class="footer-nav-link">Services</a>
-          <a href="projects" class="footer-nav-link">Projects</a>
-          <a href="#contact" class="footer-nav-link">Contact</a>
-        </div>
         <div class="footer-coded-by">
-          <p><i class="fas fa-code"></i> with 💙 by Nimish Jain &copy; 2020</p>
           <p>Built with pure HTML, CSS and JavaScript</p>
         </div>
         <div class="footer-social">
