--- a/index2.html
+++ b/index2.html
@@ -47,8 +47,52 @@
 
     <!-- Skills section -->
     <div class="section section-skills" id="skills-pg" data-anchor="skills">
-      <h1>Frameworks: </h1>
-      
+      <h2>Frameworks:</h2>
+      <div class="skills-row">
+        <div class="skills-card">
+          <img src="./assets/discord.png" alt="discord logo">
+          <p>discord.py</p>
+        </div>
+        <div class="skills-card">
+          <img src="./assets/reactjs.png" alt="reactjs logo">
+          <p>react.js</p>
+        </div>
+      </div>
+      <h2>Programming languages:</h2>
+      <div class="skills-row">
+        <div class="skills-card">
+          <img src="./assets/c.png" alt="c logo">
+          <p>C</p>
+        </div>
+        <div class="skills-card">
+          <img src="./assets/cpp.png" alt="c++ logo">
+          <p>C++</p>
+        </div>
+        <div class="skills-card">
+          <img src="./assets/java.png" alt="java logo">
+          <p>Java</p>
+        </div>
+        <div class="skills-card">
+          <img src="./assets/python.png" alt="python logo">
+          <p>Python</p>
+        </div>
+        <div class="skills-card">
+          <img src="./assets/HTML5.png" alt="HTML5 logo">
+          <p>HTML5</p>
+        </div>
+        <div class="skills-card">
+          <img src="./assets/css3.png" alt="css3 logo">
+          <p>CSS3</p>
+        </div>
+        <div class="skills-card">
+          <img src="./assets/javascript.png" alt="js logo">
+          <p>Javascript</p>
+        </div>
+        <div class="skills-card">
+          <img src="./assets/matlab.png" alt="matlab logo">
+          <p>Matlab</p>
+        </div>
+      </div>
     </div>
 
     <!-- Projects section -->
