feat: projects and research section

--- a/index2.html
+++ b/index2.html
@@ -48,61 +48,134 @@
     <!-- Skills section -->
     <div class="section section-skills" id="skills-pg" data-anchor="skills">
       <h2>Frameworks:</h2>
-      <div class="skills-row">
-        <div class="skills-card">
-          <img src="./assets/discord.png" alt="discord logo">
-          <p>discord.py</p>
-        </div>
-        <div class="skills-card">
-          <img src="./assets/reactjs.png" alt="reactjs logo">
-          <p>react.js</p>
+      <div class="skills-column">
+        <div class="skills-row">
+          <div class="skills-card">
+            <img src="./assets/discord.png" alt="discord logo">
+            <p>discord.py</p>
+          </div>
+          <div class="skills-card">
+            <img src="./assets/reactjs.png" alt="reactjs logo">
+            <p>react.js</p>
+          </div>
         </div>
       </div>
+      <br><br>
       <h2>Programming languages:</h2>
-      <div class="skills-row">
-        <div class="skills-card">
-          <img src="./assets/c.png" alt="c logo">
-          <p>C</p>
+      <div class="skills-column">
+        <div class="skills-row">
+          <div class="skills-card">
+            <img src="./assets/c.png" alt="c logo">
+            <p>C</p>
+          </div>
+          <div class="skills-card">
+            <img src="./assets/cpp.png" alt="c++ logo">
+            <p>C++</p>
+          </div>
+          <div class="skills-card">
+            <img src="./assets/java.png" alt="java logo">
+            <p>Java</p>
+          </div>
+          <div class="skills-card">
+            <img src="./assets/python.png" alt="python logo">
+            <p>Python</p>
+          </div>
         </div>
-        <div class="skills-card">
-          <img src="./assets/cpp.png" alt="c++ logo">
-          <p>C++</p>
-        </div>
-        <div class="skills-card">
-          <img src="./assets/java.png" alt="java logo">
-          <p>Java</p>
-        </div>
-        <div class="skills-card">
-          <img src="./assets/python.png" alt="python logo">
-          <p>Python</p>
-        </div>
-        <div class="skills-card">
-          <img src="./assets/HTML5.png" alt="HTML5 logo">
-          <p>HTML5</p>
-        </div>
-        <div class="skills-card">
-          <img src="./assets/css3.png" alt="css3 logo">
-          <p>CSS3</p>
-        </div>
-        <div class="skills-card">
-          <img src="./assets/javascript.png" alt="js logo">
-          <p>Javascript</p>
-        </div>
-        <div class="skills-card">
-          <img src="./assets/matlab.png" alt="matlab logo">
-          <p>Matlab</p>
+        <div class="skills-row">
+          <div class="skills-card">
+            <img src="./assets/HTML5.png" alt="HTML5 logo">
+            <p>HTML5</p>
+          </div>
+          <div class="skills-card">
+            <img src="./assets/css3.png" alt="css3 logo">
+            <p>CSS3</p>
+          </div>
+          <div class="skills-card">
+            <img src="./assets/javascript.png" alt="js logo">
+            <p>Javascript</p>
+          </div>
+          <div class="skills-card">
+            <img src="./assets/matlab.png" alt="matlab logo">
+            <p>Matlab</p>
+          </div>
         </div>
       </div>
     </div>
 
     <!-- Projects section -->
     <div class="section section-projects" id="projects-pg" data-anchor="projects">
-      
+      <h1>No projects done yet</h1>
+       <div class="projects-column">
+        <div class="projects-row">
+          <div class="projects-card">
+            <img src="./assets/c.png" alt="matlab logo">
+            <p>Matlab</p>
+          </div>
+          <div class="projects-card">
+            <img src="./assets/matlab.png" alt="matlab logo">
+            <p>Matlab</p>
+          </div>
+        </div>
+        <div class="projects-row">
+          <div class="projects-card">
+            <img src="./assets/matlab.png" alt="matlab logo">
+            <p>Matlab</p>
+          </div>
+          <div class="projects-card">
+            <img src="./assets/matlab.png" alt="matlab logo">
+            <p>Matlab</p>
+          </div>
+        </div>
+      </div>
+      <div class="projects-column">
+        <div class="projects-row">
+          <div class="projects-card">
+            <img src="./assets/matlab.png" alt="matlab logo">
+            <p>Matlab</p>
+          </div>
+          <div class="projects-card">
+            <img src="./assets/matlab.png" alt="matlab logo">
+            <p>Matlab</p>
+          </div>
+        </div> 
+        <div class="projects-row">
+          <div class="projects-card">
+            <img src="./assets/matlab.png" alt="matlab logo">
+            <p>Matlab</p>
+          </div>
+          <div class="projects-card">
+            <img src="./assets/matlab.png" alt="matlab logo">
+            <p>Matlab</p>
+          </div>
+        </div>
+      </div> 
     </div>
 
     <!-- Research section -->
     <div class="section section-research" id="research-pg" data-anchor="research">
-      
+      <h1>Check out my research accounts</h1>
+      <div class="research-acc-column">
+        <div class="research-acc-row">
+          <div class="research-acc-card">
+            <a href="https://scholar.google.com/citations?user=oKBKRQ0AAAAJ&hl=en" alt="Research Gate" target="_blank">
+              <img src="./assets/googlescholar.png" alt="Google scholar">
+            </a>
+            <p>Google scholar</p>
+          </div>
+          <div class="research-acc-card">
+            <a href="https://www.researchgate.net/profile/Nimish-Jain-4" alt="Research Gate" target="_blank">
+              <img src="./assets/researchgate.png" alt="Researchgate">
+            </a>
+            <p>Researchgate</p>
+          </div>
+          <div class="research-acc-card">
+            <a href="https://publons.com/researcher/4167049/nimish-jain/" alt="Research Gate" target="_blank">
+              <img src="./assets/publons.png" alt="Publons">
+            </a>
+            <p>Publons</p>
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- Contact section -->
