--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.0/fullpage.css" 
   integrity="sha512-hGBKkjAVJUXoImyDezOKpzuY4LS1eTvJ4HTC/pbxn47x5zNzGA1vi3vFQhhOehWLTNHdn+2Yqh/IRNPw/8JF/A==" 
   crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="styles.css" />
   <title>Nimish Jain</title>
 </head>
@@ -196,7 +197,7 @@
         <a href="tel:+9304917126" class="fa fa-phone"></a>
       </div>
       <div class="contact-fork">
-          <p><a href="https://github.com/nimishjn/portfolio" target="_blank">Fork</a> this website</p>
+          <p><a href="https://github.com/nimishjn/portfolio" target="_blank">Fork</a> this website on GitHub</p>
       </div>
     </div>
   </div>
