feat: background image

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
       <div class="skills-column">
         <div class="skills-row">
           <div class="skills-card">
-            <img src="./assets/discord.png" alt="discord logo">
+            <a href="https://discordpy.readthedocs.io/"><img src="./assets/discord.png" alt="discord logo"></a>
             <p>discord.py</p>
           </div>
           <div class="skills-card">
-            <img src="./assets/reactjs.png" alt="reactjs logo">
+            <a href="https://reactjs.org/"><img src="./assets/reactjs.png" alt="reactjs logo"></a>
             <p>react.js</p>
           </div>
         </div>
@@ -69,7 +69,7 @@
       <div class="skills-column">
         <div class="skills-row">
           <div class="skills-card">
-            <img src="./assets/c.png" alt="c logo">
+            <a href=""><img src="./assets/c.png" alt="c logo"></a>
             <p>C</p>
           </div>
           <div class="skills-card">
