feat: LinkedIn profile in contact section

--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
       <h1>Get to know more about me...</h1>
       <div class="contact-items">
         <a href="https://www.github.com/nimishjn" target="_blank" class="fa fa-github"></a>
+        <a href="https://www.linkedin.com/in/nimishjn/" target="_blank" class="fa fa-linkedin"></a>
         <a href="https://www.facebook.com/nimishjain100701" target="_blank" class="fa fa-facebook"></a>
         <a href="https://www.twitter.com/nimishjain_" target="_blank" class="fa fa-twitter"></a>
         <a href="https://www.instagram.com/nimishjain_" target="_blank" class="fa fa-instagram"></a>
