feat: made using fullpage.js

--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
         <a href="tel:+9304917126" class="fa fa-phone"></a>
       </div>
       <div class="contact-fork">
+        <p>Made using <a href="https://github.com/alvarotrigo/fullpage.js" target="_blank">fullpage.js</a></p>
           <p><a href="https://github.com/nimishjn/portfolio" target="_blank">Fork</a> this website on GitHub</p>
       </div>
     </div>
