Removed javascript and react.js

--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
             <a href="https://discordpy.readthedocs.io/"><img src="./assets/discord.png" alt="discord logo"></a>
             <p>discord.py</p>
           </div>
-          <div class="skills-card">
+          <!-- <div class="skills-card">
             <a href="https://reactjs.org/"><img src="./assets/reactjs.png" alt="reactjs logo"></a>
             <p>react.js</p>
-          </div>
+          </div> -->
         </div>
       </div>
       <br><br>
@@ -101,8 +101,8 @@
             <p>CSS3</p>
           </div>
           <div class="skills-card">
-            <img src="./assets/javascript.png" alt="js logo">
-            <p>Javascript</p>
+            <img src="./assets/git.png" alt="js logo">
+            <p>Git</p>
           </div>
           <div class="skills-card">
             <img src="./assets/matlab.png" alt="matlab logo">
