Added new about paragraph

--- a/index.html
+++ b/index.html
@@ -41,16 +41,18 @@
     <!-- About section -->
     <div class="section section-about" data-anchor="about">
         <div class="description">
-            <p>This is Nimish Jain. I am currently a fresher studying 
-                Information Technology at Vellore Institute of Technology, 
-                Vellore. I am currently exploring front-end web development 
-                using react.js and back-end web development using node.js. 
-                I also did a bit of app development using the flutter 
-                framework. I know a few programming languages like C, C++, 
-                Java and Python, along with HTML, CSS and Javascript. I am 
-                also a data analytics researcher in the data preprocessing 
-                domain. I have a conference publication under IEEE 
-                Organization.</p>
+            <p>Hey, this is Nimish, a freshman at Vellore Institute of Technology, 
+              Vellore. I am currently pursuing B. Tech in Information Technology. 
+              I am interested in full-stack web development, beginning with HTML, 
+              CSS and JavaScript, and gradually moving towards react.js and node.js. 
+              I am constantly upskilling my technical knowledge by solving questions 
+              on HackerRank, which has led me to achieving Gold badge in Python, Silver 
+              Badge in Problem Solving and Bronze Badge in Java. Apart from HackerRank, 
+              I am constantly trying to keep my GitHub as green as possible. I am also 
+              a Data Analytics researcher in the data preprocessing domain under the 
+              mentorship of Dr. B. R. Prusty. I have a conference publication in the 
+              IEEE Organization. I have recently submitted one conference manuscript 
+              and a letter format Journal manuscript in the IEEE Organisation.</p>
             <p><a href="#contact">Contact me</a> to know more about me!</p>
         </div>
     </div>
