--- a/index.html
+++ b/index.html
@@ -31,10 +31,30 @@
 
     <!-- Home -->
     <div class="home-container">
-        <div class="headings">
-            
+        <div class="home-text">
+            <h1>Hi, I’m Nimish</h1>
+            <h2>An aspiring fullstack developer</h2>
+            <h2>Data Analytics Researcher</h2>
+            <div class="home-socials">
+                <a href="https://github.com/nimishjn" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/nimishjn/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://twitter.com/nimishjain_" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.hackerrank.com/nimishjain100701" target="_blank"><i class="fab fa-hackerrank"></i></a>
+            </div>
+            <div class="buttons">
+                <button active><i class="fas fa-comment-dots"></i> GET IN TOUCH</button>
+                <button active><i class="fas fa-arrow-alt-circle-down"></i> KNOW MORE</button>
+            </div>
         </div>
         <img src="./assets/hello.svg" alt="Hello">
+    </div>
+
+    <!-- About -->
+    <div id="skills" class="about-container">
+        <img src="./nimish.svg" alt="Nimish vector art">
+        <div id="all-skills">
+
+        </div>
     </div>
         
 </body>
