--- a/index.html
+++ b/index.html
@@ -49,13 +49,22 @@
         <img src="./assets/hello.svg" alt="Hello">
     </div>
 
-    <!-- About -->
-    <div id="skills" class="about-container">
-        <img src="./nimish.svg" alt="Nimish vector art">
-        <div id="all-skills">
-
+    <!-- Skills -->
+    <div id="skills" class="skills-container">
+        <img class="nimish-svg" src="./assets/nimish.svg" alt="Nimish vector art">
+        <div class="skills-main">
+            <h1>Tools and skills</h1>
+            <div id="all-skills">
+                <!-- skill-card template
+                <div class="skill-card">
+                    <p>C</p>
+                    <img src="./assets/c.png" alt="C Programming">
+                </div> 
+                -->
+            </div>
         </div>
     </div>
         
 </body>
+<script src="./main.js"></script>
 </html>
