--- a/index.html
+++ b/index.html
@@ -58,11 +58,16 @@
             <h1>About</h1>
             <p>Hey, this is Nimish Jain, second year undergrad at Vellore
                 Institute of Technology, Vellore pursuing B. Tech Information Technology.
-                I am currently learning react.js and will move to Node.js for backend.
+                I am currently learning react.js and will move to Node.js for backend. 
                 I am a Data Analytics Researcher in Data Preprocessing domain.
-                I have also a conference publication in the IEEE organization.
-                 
+                I have a conference publication in the IEEE organization and another 
+                conference paper accepted at CAMS 2021, Germany. Do check out my research 
+                profiles and publications. 
             </p>
+            <div class="about-buttons">
+                <button onclick="window.location = '#projects';" active>Projects</button>
+                <button onclick="window.location = '#research';" active>Research</button>
+            </div>
         </div>
     </div>
 
