Added section templates

--- a/index.html
+++ b/index.html
@@ -86,6 +86,21 @@
             </div>
         </div>
     </div>
+
+    <!-- Projects -->
+    <div id="projects" class="projects-container">
+        Projects
+    </div>
+
+    <!-- Research -->
+    <div id="research" class="research-container">
+        Research
+    </div>
+
+    <!-- Contact -->
+    <div id="contact" class="contact-container">
+        Contact
+    </div>
         
 </body>
 <script src="./main.js"></script>
