--- a/index.html
+++ b/index.html
@@ -100,7 +100,24 @@
 
     <!-- Projects -->
     <div id="projects" class="projects-container">
-        Projects
+        <h1>Projects</h1>
+        <div id="all-projects">
+            <!-- Project card
+            <div class="project-card">
+                <img src="./assets/quiz.png" alt="Project">
+                <h2>Project Title</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    Nam efficitur mauris sit amet finibus ultrices. Donec non 
+                    arcu a risus pulvinar fringilla sit amet id lacus. Integer 
+                    eleifend mi in libero eleifend, facilisis pharetra sem dapibus. </p>
+                <div class="project-buttons">
+                    <a id="deploy-button" href="./projects/sample" target="_blank"><i class="fas fa-eye"></i> View</a>
+                    <a href="https://github.com/nimishjn" id="code-button" target="_blank"><i class="fas fa-file-code"></i> Code</a>
+                </div>
+            </div> 
+            -->
+        </div>
+            
     </div>
 
     <!-- Research -->
