--- a/index.html
+++ b/index.html
@@ -122,7 +122,34 @@
 
     <!-- Research -->
     <div id="research" class="research-container">
-        Research
+        <div class="research-profiles">
+            <h1>Research Profiles</h1>
+            <div id="all-research-profiles">
+                <!-- Research profiles template
+                <a rel="noreferrer noopener" href="https://resume.nimish-jain.com" target="_blank">
+                    <div class="research-card">
+                        <i class="fas fa-file-alt"></i>
+                        <p>Resume</p>
+                        <i class="fas fa-angle-right"></i>
+                    </div>
+                </a> 
+                -->
+            </div>
+        </div>
+        <div class="research-papers">
+            <h1>Research Papers</h1>
+            <div id="all-research-papers">
+                <!-- Research paper template
+                <a rel="noreferrer noopener" href="https://resume.nimish-jain.com" target="_blank">
+                    <div class="research-card">
+                        <i class="fas fa-file-alt"></i>
+                        <p>Resume</p>
+                        <i class="fas fa-angle-right"></i>
+                    </div>
+                </a> 
+                -->
+            </div>
+        </div>
     </div>
 
     <!-- Contact -->
