--- a/index.html
+++ b/index.html
@@ -154,7 +154,12 @@
 
     <!-- Contact -->
     <div id="contact" class="contact-container">
-        Contact
+        <div class="connect">
+
+        </div>
+        <div class="say-hi">
+            
+        </div>
     </div>
         
 </body>
